[project]
name = "pictionary-cam"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.128.0",
  "opencv-python==4.12.0.88",
  "pillow>=12.1.0",
  "ruff>=0.14.11",
  "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
  "ruff>=0.14.11",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "ANN"]